        cycles of its observer context. It will check if the active subjects changed during a processing cycle and
        only emit at the end of a processing cycle if necessary.
    [#] Observer will now only emit modificationStateChanged() at the end of a processing cycle when the modification state
        actually changed during a processing cycle.

    [*] Fixed some places in FileUtils where files were not closed properly.
    [*] Fixed bug in QtilitiesProperty constructor where it did not set the property name correctly when specified, resulting
        in isValid() returning false for valid properties.
    [*] Fixed bug in QtilitiesApplication::applicationSessionPath() where it messed up the QDesktopServices::DataLocation path which should be used by default.
    [*] Fixed bug in ObjectManager::compareDynamicProperties() where it could pick up invalid changes to properties.
    [*] Fixed problems where a subject implementing the IModificationStateNotifier interface could be set to modified even hwne
        attachment of the object to an observer context failed.
    [*] Fixed potential problems with FileUtils using static variables in the wrong way.
    [*] Fixed bug in TreeIterator where it fell over in some situations when subjects are attached to multiple trees.
    [*] Fixed bug where Observer::endProcessingCycle() emitted modificationStateChanged() even when broadcast was false.
    [*] Fixed wrong initialization of d_application_busy_count in QtilitiesCoreApplication.
    [*] Fixed #72 - Observer: Inconstancy in behavior of attachSubject() and detachSubject() in regards to rejection messages.
    [*] Fixed issues with QtilitiesCoreApplication::applicationSessionPath().

    ============================
    QtilitiesCoreGui:
    ============================
    [+] You can now specify which widget logger engine message displays must be used by TaskManagerGui when assigning logger engines to tasks.